--- a/elements.html
+++ b/elements.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Michael</strong> <span>Geiger</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
