--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+		//				<ul class="actions stacked">
+		//					<li><a href="#" class="button primary fit">Get Started</a></li>
+		//					<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
 
@@ -43,13 +43,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>MSc Cyber Security E-Portfolio</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>Welcome to my e-portfolio based on the work carried out in the<br />
+								MSc Cyber Security Programme.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+		//							<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
 							</div>
 						</div>
