--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 								<h1>MSc Cyber Security E-Portfolio</h1>
 							</header>
 							<div class="content">
-								<p>Welcome to my e-portfolio based on the work carried out in the<br />
-								MSc Cyber Security Programme.</p>
+								<p>Welcome to my e-portfolio based on the work carried out in<br />
+								the MSc Cyber Security Programme.</p>
 								<ul class="actions">
 		//							<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
