--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
-		//				<ul class="actions stacked">
+		<!--				<ul class="actions stacked">
 		//					<li><a href="#" class="button primary fit">Get Started</a></li>
-		//					<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
+							<li><a href="#" class="button fit">Log In</a></li>
+		-->				</ul>
 					</nav>
 
 				<!-- Banner -->
@@ -48,13 +48,13 @@
 							<div class="content">
 								<p>Welcome to my e-portfolio based on the work carried out in<br />
 								the MSc Cyber Security Programme.</p>
-								<ul class="actions">
+			<!--					<ul class="actions">
 		//							<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
 							</div>
 						</div>
 					</section>
-
+			-->
 				<!-- Main -->
 					<div id="main">
 
