--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
-		<--				<ul class="actions stacked">
+		<!--				<ul class="actions stacked">
 		//					<li><a href="#" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 		-->				</ul>
@@ -65,8 +65,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Launching into Cyber Security</a></h3>
+										<p>Inductory Module</p>
 									</header>
 								</article>
 								<article>
