--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
-		<!--				<ul class="actions stacked">
-		//					<li><a href="#" class="button primary fit">Get Started</a></li>
+						<ul class="actions stacked">
+							<li><a href="#" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
-		-->				</ul>
+						</ul>
 					</nav>
 
 				<!-- Banner -->
@@ -48,13 +48,13 @@
 							<div class="content">
 								<p>Welcome to my e-portfolio based on the work carried out in<br />
 								the MSc Cyber Security Programme.</p>
-			<--					<ul class="actions">
-		//							<li><a href="#one" class="button next scrolly">Get Started</a></li>
+								<ul class="actions">
+									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
 							</div>
 						</div>
 					</section>
-			-->
+			
 				<!-- Main -->
 					<div id="main">
 
@@ -67,6 +67,7 @@
 									<header class="major">
 										<h3><a href="landing.html" class="link">Launching into Cyber Security</a></h3>
 										<p>Inductory Module</p>
+										<p>about the necessity and importance of Cyber Security</p>
 									</header>
 								</article>
 								<article>
@@ -74,8 +75,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Network and Information Security Management</a></h3>
+										<p>Hier könnte ihre Werbung stehen</p>
 									</header>
 								</article>
 								<article>
@@ -83,8 +84,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">Information Risk Management</a></h3>
+										<p>Fliegende Fische</p>
 									</header>
 								</article>
 								<article>
@@ -92,7 +93,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">Secure Software Development</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
