--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 									<header class="major">
 										<h3><a href="landing.html" class="link">Launching into Cyber Security</a></h3>
 										<p>Inductory Module</p>
-										<p>about the necessity and importance of Cyber Security</p>
+										<p>about the necessity and <p> 
+										<p>importance of Cyber Security</p>
 									</header>
 								</article>
 								<article>
