--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 									<header class="major">
 										<h3><a href="landing.html" class="link">MSc Cyber Security Project</a></h3>
 										<p>graduation project of the MSc Cyber Security</p>
+										<p>Work in Progress <p>
 										
 											</header>
 						
