--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</header>
 									<p>Test Text</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Civita</a></li>
+										<li><a href="Aboutme.html" class="button next">Civita</a></li>
 									</ul>
 								</div>
 							</section>
