--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Aboutme.html">Abutme</a></li>
 							<li><a href="landing.html">Landing</a></li>
-							<li><a href="landingv.html">Landing</a></li>
+							<li><a href="landingv.html">Landingv</a></li>
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
