--- a/Aboutme.html
+++ b/Aboutme.html
@@ -50,11 +50,10 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Landing</h1>
+								<h1>About Me</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Ein Text über mich</p>
 							</div>
 						</div>
 					</section>
@@ -66,7 +65,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>Brief Intro</h2>
 									</header>
 										<p> Test Test <p/>
 								</div>
@@ -81,9 +80,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>Work History</h3>
 											</header>
-											<p>Test Test2.</p>
+											<p>Just a snapshot</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -97,9 +96,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>Benchmark Statement</h3>
 											</header>
-											<p>Test Test 3.</p>
+											<p>(what I know in theory and practice and what I want to learn)</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -113,7 +112,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Sed nunc ligula</h3>
+												<h3>Other Info</h3>
 											</header>
 											<p>Test Test 4</p>
 											<ul class="actions">
@@ -128,7 +127,7 @@
 							<section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>More Info</h2>
 									</header>
 									<p>Test Test5.</p>
 									<ul class="actions">
