--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 							<li><a href="Aboutme.html">Abutme</a></li>
 							<li><a href="landing.html">Landing</a></li>
 							<li><a href="landingv.html">Landingv</a></li>
-							<li><a href="generic.html">Generic</a></li>
+			<!--		<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
-						</ul>
+				--> 	</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
