--- a/Aboutme.html
+++ b/Aboutme.html
@@ -171,7 +171,7 @@
 										<a href="#">information@untitled.tld</a>
 									</div>
 								</section>
-								<section>
+					<!--			<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
@@ -185,14 +185,14 @@
 										<span>1234 Somewhere Road #5432<br />
 										Nashville, TN 00000<br />
 										United States of America</span>
-									</div>
+						-->			</div>
 								</section>
 							</section>
 						</div>
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
+	<!--				<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -203,6 +203,9 @@
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				
+		-->					
+							
 							</ul>
 						</div>
 					</footer>
