--- a/Launchingintocybersecurity.html
+++ b/Launchingintocybersecurity.html
@@ -59,7 +59,7 @@
 							
 							
 							<div class="content">
-								<p>An introduction to the world of Cyber Security.</p>
+								<p>An An introduction to the world of Cyber Security</p>
 							</div>
 						</div>
 					</section>
