--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Launching into Cyber Security</a></h3>
-										<p>An introduction to the world of Cyber Security/p>
+										<p>An introduction to the world of Cyber Security</p>
 									</header>
 								</article>
 								<article>
