--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Launching into Cyber Security</a></h3>
+										<h3><a href="Launchingintocybersecurity.html" class="link">Launching into Cyber Security</a></h3>
 										<p>An introduction to the world of Cyber Security </p>
 									</header>
 								</article>
