--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">geigermichael@gmx.net</a>
 									</div>
 								</section>
-								<section>
+			<!--					<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
@@ -229,14 +229,14 @@
 										<span>1234 Somewhere Road #5432<br />
 										Nashville, TN 00000<br />
 										United States of America</span>
-									</div>
+					-->				</div>
 								</section>
 							</section>
 						</div>
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
+		<!--			<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -246,7 +246,9 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						 	<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+					-->			
+								
 							</ul>
 						</div>
 					</footer>
