--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="Aboutme.html">Abutme</a></li>
-							<li><a href="Launchingintocybersecurity.html">Launching into Cyber Security</a></li>
+							<li><a href="1Aboutme.html">Abutme</a></li>
+							<li><a href="2Launchingintocybersecurity.html">Launching into Cyber Security</a></li>
 							<li><a href="landing.html">Landing</a></li>
 							<li><a href="landingv.html">Landingv</a></li>
 			<!--		<li><a href="generic.html">Generic</a></li>
@@ -69,7 +69,7 @@
 									</header>
 									<p>Test Text</p>
 									<ul class="actions">
-										<li><a href="Aboutme.html" class="button next">Civita</a></li>
+										<li><a href="1Aboutme.html" class="button next">Civita</a></li>
 									</ul>
 								</div>
 							</section>
@@ -88,7 +88,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Launchingintocybersecurity.html" class="link">Launching into Cyber Security</a></h3>
+										<h3><a href="2Launchingintocybersecurity.html" class="link">Launching into Cyber Security</a></h3>
 										<p>An introduction to the world of Cyber Security </p>
 									</header>
 								</article>
