--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									</header>
 									<p>Test Text</p>
 									<ul class="actions">
-										<li><a href="1Aboutme.html" class="button next">Civita</a></li>
+										<li><a href="1Aboutme.html" class="button next">more</a></li>
 									</ul>
 								</div>
 							</section>
