--- a/4Infromationriskmanagement.html
+++ b/4Infromationriskmanagement.html
@@ -49,7 +49,7 @@
 							</span>
 
 							<header class="major">
-								<h1>Information risk Management</h1>
+								<h1>Information Risk Management</h1>
 							</header>
 				
 							<div class="content">
