--- a/5Securesoftwaredevelopment.html
+++ b/5Securesoftwaredevelopment.html
@@ -49,7 +49,7 @@
 							</span>
 
 							<header class="major">
-								<h1>Secure software Development</h1>
+								<h1>Secure Software Development</h1>
 							</header>
 				
 							<div class="content">
