--- a/6Securesystemarchitecture.html
+++ b/6Securesystemarchitecture.html
@@ -49,7 +49,7 @@
 							</span>
 
 							<header class="major">
-								<h1>Secure systems architecture</h1>
+								<h1>Secure Systems Architecture</h1>
 							</header>
 				
 							<div class="content">
