--- a/7Thehumanfactor.html
+++ b/7Thehumanfactor.html
@@ -49,7 +49,7 @@
 							</span>
 
 							<header class="major">
-								<h1>The human factor</h1>
+								<h1>The Human Factor</h1>
 							</header>
 				
 							<div class="content">
