--- a/8Principlesofdigitalforensicsandcyberlaw.html
+++ b/8Principlesofdigitalforensicsandcyberlaw.html
@@ -49,7 +49,7 @@
 							</span>
 
 							<header class="major">
-								<h1>Principles of digital forensics and cyber law</h1>
+								<h1>Principles of Digital Forensics and Cyber Law</h1>
 							</header>
 				
 							<div class="content">
