--- a/9Resarchmethodsandprofessionalpractice.html
+++ b/9Resarchmethodsandprofessionalpractice.html
@@ -49,7 +49,7 @@
 							</span>
 
 							<header class="major">
-								<h1>Research methods and professional practice</h1>
+								<h1>Research Methods and Professional Practice</h1>
 							</header>
 				
 							<div class="content">
