--- a/index.html
+++ b/index.html
@@ -31,9 +31,17 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="1Aboutme.html">Abutme</a></li>
 							<li><a href="2Launchingintocybersecurity.html">Launching into Cyber Security</a></li>
-							<li><a href="landing.html">Landing</a></li>
+							<li><a href="3Networkandinformtaionsecuritymanagement.html">Landing</a></li>
+							<li><a href="4Infromationriskmanagement.html">Landing</a></li>
+							<li><a href="5Securesoftwaredevelopment.html">Landing</a></li>
+							<li><a href="6Securesystemarchitecture.html">Landing</a></li>
+							<li><a href="7Thehumanfactor.html">Landing</a></li>
+							<li><a href="8Principlesofdigitalforensicsandcyberlaw.html">Landing</a></li>
+							<li><a href="9Resarchmethodsandprofessionalpractice.html">Landing</a></li>
+							<li><a href="10Msccybersecurityproject.html">Landing</a></li>
+			<!--		<li><a href="landing.html">Landing</a></li>
 							<li><a href="landingv.html">Landingv</a></li>
-			<!--		<li><a href="generic.html">Generic</a></li>
+			    		<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 				--> 	</ul>
 						<ul class="actions stacked">
