--- a/9Resarchmethodsandprofessionalpractice.html
+++ b/9Resarchmethodsandprofessionalpractice.html
@@ -29,17 +29,17 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<<li><a href="index.html">Home</a></li>
 							<li><a href="1Aboutme.html">Abutme</a></li>
 							<li><a href="2Launchingintocybersecurity.html">Launching into Cyber Security</a></li>
-							<li><a href="3Networkandinformtaionsecuritymanagement.html">Landing</a></li>
-							<li><a href="4Infromationriskmanagement.html">Landing</a></li>
-							<li><a href="5Securesoftwaredevelopment.html">Landing</a></li>
-							<li><a href="6Securesystemarchitecture.html">Landing</a></li>
-							<li><a href="7Thehumanfactor.html">Landing</a></li>
-							<li><a href="8Principlesofdigitalforensicsandcyberlaw.html">Landing</a></li>
-							<li><a href="9Resarchmethodsandprofessionalpractice.html">Landing</a></li>
-							<li><a href="10Msccybersecurityproject.html">Landing</a></li>
+							<li><a href="3Networkandinformtaionsecuritymanagement.html">Network and Information Security Managment</a></li>
+							<li><a href="4Infromationriskmanagement.html">Information Risk Management</a></li>
+							<li><a href="5Securesoftwaredevelopment.html">Secure Software Development</a></li>
+							<li><a href="6Securesystemarchitecture.html">Secure System Architecture</a></li>
+							<li><a href="7Thehumanfactor.html">The Human Factor</a></li>
+							<li><a href="8Principlesofdigitalforensicsandcyberlaw.html">Principles of Digital Forensics and Cyber Law</a></li>
+							<li><a href="9Resarchmethodsandprofessionalpractice.html">Research Methods and Professional Practice</a></li>
+							<li><a href="10Msccybersecurityproject.html">MSc Cyber Security Project</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
