--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 										<a href="#">geigermichael@gmx.net</a>
 									</div>
 								</section>
-			<!--					<section>
-									<div class="contact-method">
+								<section>
+			<!--						<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
 										<span>(000) 000-0000 x12387</span>
