--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 									<header class="major">
 										<h2>About me</h2>
 									</header>
-									<p>Test Text</p>
+									<p>Development means future and the future will largely take place on the Internet. With this guiding principle in mind, I use the MSc in Cyber Security to prepare myself for the future and to be able to do my part for a better world. I have a university background in natural sciences (physics and geography) and have worked as a teacher in Germany. Since in my opinion the most important good is knowledge, I strive for a lifelong personal development in order to be able to support and advise others with the skills I have acquired.t</p>
 									<ul class="actions">
 										<li><a href="1Aboutme.html" class="button next">more</a></li>
 									</ul>
@@ -203,7 +203,7 @@
 	
 
 				<!-- Contact -->
-					<section id="contact">
+		<!--			<section id="contact">
 						<div class="inner">
 							</section>
 								<form method="post" action="#">
@@ -224,7 +224,7 @@
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
-									</ul>
+							-->		</ul>
 								</form>
 							</section>
 							<section class="split">
@@ -256,17 +256,17 @@
 					</section>
 
 				<!-- Footer -->
-		<!--			<footer id="footer">
+					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+		<!--						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+				-->				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+		<!--						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+		-->						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-						 	<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						 	<li>&copy; Michael Geiger</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					-->			
 								
 							</ul>
