--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 									<header class="major">
 										<h2>About me</h2>
 									</header>
-									<p>Development means future and the future will largely take place on the Internet. With this guiding principle in mind, I use the MSc in Cyber Security to prepare myself for the future and to be able to do my part for a better world. I have a university background in natural sciences (physics and geography) and have worked as a teacher in Germany. Since in my opinion the most important good is knowledge, I strive for a lifelong personal development in order to be able to support and advise others with the skills I have acquired.t</p>
+									<p>Development means future and the future will largely take place on the Internet. With this guiding principle in mind, I use the MSc in Cyber Security to prepare myself for the future and to be able to do my part for a better world. I have a university background in natural sciences (physics and geography) and have worked as a teacher in Germany. Since in my opinion the most important good is knowledge, I strive for a lifelong personal development in order to be able to support and advise others with the skills I have acquired.</p>
 									<ul class="actions">
 										<li><a href="1Aboutme.html" class="button next">more</a></li>
 									</ul>
@@ -267,7 +267,7 @@
 							</ul>
 							<ul class="copyright">
 						 	<li>&copy; Michael Geiger</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-					-->			
+								
 								
 							</ul>
 						</div>
