--- a/2Launchingintocybersecurity.html
+++ b/2Launchingintocybersecurity.html
@@ -82,12 +82,15 @@
 										
 										<h2>Learning Outcomes</h2>
 									</header>
-									<p>I will learn:
+									<p>
+    Identify and explain the architecture, structure and functionality of basic components of a computer system, considering Cyber Security issues.
+										<p>
+    Evaluate critically implications of the key vulnerabilities and threats of software and network security and approaches to mitigate these issues.
+											<p>
+    Appraise critically and apply the concepts and principles of secure object-oriented programming and design to facilitate business security-based decisions.
+												<p>
+												Evaluate critically the solutions developed to solve/mitigate these security issues.
 
-    Dolor etiam magna etiam.
-										
-    Sagittis lorem eleifend.
-    Felis dolore viverra.
 </p>
 								</div>
 							</section>
