--- a/2Launchingintocybersecurity.html
+++ b/2Launchingintocybersecurity.html
@@ -83,13 +83,14 @@
 										<h2>Learning Outcomes</h2>
 									</header>
 									<p>
-    Identify and explain the architecture, structure and functionality of basic components of a computer system, considering Cyber Security issues.
+										<ul>
+   <li> Identify and explain the architecture, structure and functionality of basic components of a computer system, considering Cyber Security issues. </li>
 										<p>
-    Evaluate critically implications of the key vulnerabilities and threats of software and network security and approaches to mitigate these issues.
+   <li> Evaluate critically implications of the key vulnerabilities and threats of software and network security and approaches to mitigate these issues. </li>
 											<p>
-    Appraise critically and apply the concepts and principles of secure object-oriented programming and design to facilitate business security-based decisions.
+  <li>  Appraise critically and apply the concepts and principles of secure object-oriented programming and design to facilitate business security-based decisions. </li>
 												<p>
-												Evaluate critically the solutions developed to solve/mitigate these security issues.
+									<li>			Evaluate critically the solutions developed to solve/mitigate these security issues. </li>
 
 </p>
 								</div>
