--- a/2Launchingintocybersecurity.html
+++ b/2Launchingintocybersecurity.html
@@ -99,7 +99,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
+									<a href="generic vorlage.html" class="image">
 										<img src="images/picprojects.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
