--- a/2Launchingintocybersecurity.html
+++ b/2Launchingintocybersecurity.html
@@ -109,7 +109,7 @@
 											</header>
 											<p>These are the projects carried out to meet those learning outcomes, which are described in the link below.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="generic vorlage.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
