--- a/generic vorlage.html
+++ b/generic vorlage.html
@@ -53,9 +53,11 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>Artefects</h1>
 									</header>
-									<span class="image main"><img src="images/picprojects.jpg" alt="" /></span>
+								<!--	<span class="image main"><img src="images/picprojects.jpg" alt="" /></span>
+							-->
+							<img src="images/picprojects.jpg" alt="" data-position="center center" />		
 									<p> Text <p>
 									<p> Text2 <p>
 									<p> Text 3 <p>
