--- a/generic vorlage.html
+++ b/generic vorlage.html
@@ -57,7 +57,10 @@
 									</header>
 								<!--	<span class="image main"><img src="images/picprojects.jpg" alt="" /></span>
 							-->
-							<img src="images/picprojects.jpg" alt="" data-position="center center" />		
+					<!--		<img src="images/picprojects.jpg" alt="" data-position="center center" />		
+						-->			
+									<img src="images/picprojects.jpg" width="100" height="150" align="left">
+									
 									<p> Text <p>
 									<p> Text2 <p>
 									<p> Text 3 <p>
