--- a/generic vorlage.html
+++ b/generic vorlage.html
@@ -61,7 +61,7 @@
 						-->			
 									<img src="images/picprojects.jpg" width="1500" height="1000" align="left">
 									
-									<p>
+								</div>
 									
 									<p> Text <p>
 									<p> Text2 <p>
