--- a/generic vorlage.html
+++ b/generic vorlage.html
@@ -59,8 +59,9 @@
 							-->
 					<!--		<img src="images/picprojects.jpg" alt="" data-position="center center" />		
 						-->			
-									<img src="images/picprojects.jpg" width="1500" height="1000" align="left">
+									<img src="images/picprojects.jpg" width="750" height="500" align="left">
 									
+								</div>
 								</div>
 									
 									<p> Text <p>
