--- a/generic vorlage.html
+++ b/generic vorlage.html
@@ -59,7 +59,7 @@
 							-->
 					<!--		<img src="images/picprojects.jpg" alt="" data-position="center center" />		
 						-->			
-									<img src="images/picprojects.jpg" width="375" height="250">  <!-- align="left">  -->
+									<img src="images/picprojects.jpg" width="375" height="250" data-position="center center" /> <!-- align="left">  -->
 									
 								</div>
 									
