--- a/5Securesoftwaredevelopment.html
+++ b/5Securesoftwaredevelopment.html
@@ -27,7 +27,7 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+						<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="1Aboutme.html">Abutme</a></li>
@@ -40,13 +40,16 @@
 							<li><a href="8Principlesofdigitalforensicsandcyberlaw.html">Principles of Digital Forensics and Cyber Law</a></li>
 							<li><a href="9Resarchmethodsandprofessionalpractice.html">Research Methods and Professional Practice</a></li>
 							<li><a href="10Msccybersecurityproject.html">MSc Cyber Security Project</a></li>
-						</ul>
-						<ul class="actions stacked">
+			<!--		<li><a href="landing.html">Landing</a></li>
+							<li><a href="landingv.html">Landingv</a></li>
+			    		<li><a href="generic.html">Generic</a></li>
+							<li><a href="elements.html">Elements</a></li>
+				--> 	</ul>
+			<!--			<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
+			-->			</ul>
 					</nav>
-
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
 					<section id="banner" class="style2">
