--- a/generic vorlage.html
+++ b/generic vorlage.html
@@ -59,9 +59,11 @@
 							-->
 					<!--		<img src="images/picprojects.jpg" alt="" data-position="center center" />		
 						-->			
-									<img src="images/picprojects.jpg" width="1000" height="333" align="left">  
-									
+									<img src="images/picprojects.jpg" width="800" height="333" align="left">  
+									<div>
 								</div>
+									</section>
+									
 								<section id="two">
 									<div class="inner">
 										<header class="major">
