--- a/1Aboutme.html
+++ b/1Aboutme.html
@@ -62,7 +62,7 @@
 								<h1>About Me</h1>
 							</header>
 							<div class="content">
-								<p>Ein Text über mich</p>
+								<p>a text aout me</p>
 							</div>
 						</div>
 					</section>
