--- a/generic vorlage.html
+++ b/generic vorlage.html
@@ -62,7 +62,7 @@
 									<img src="images/picprojects.jpg" width="800" height="333" align="left">  
 									<div>
 								</div>
-									</section>
+									<!-- </section> -->
 									
 								<section id="two">
 									<div class="inner">
