--- a/generic vorlage.html
+++ b/generic vorlage.html
@@ -39,11 +39,15 @@
 							<li><a href="8Principlesofdigitalforensicsandcyberlaw.html">Principles of Digital Forensics and Cyber Law</a></li>
 							<li><a href="9Resarchmethodsandprofessionalpractice.html">Research Methods and Professional Practice</a></li>
 							<li><a href="10Msccybersecurityproject.html">MSc Cyber Security Project</a></li>
-						</ul>
-						<ul class="actions stacked">
+			<!--		<li><a href="landing.html">Landing</a></li>
+							<li><a href="landingv.html">Landingv</a></li>
+			    		<li><a href="generic.html">Generic</a></li>
+							<li><a href="elements.html">Elements</a></li>
+				--> 	</ul>
+			<!--			<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
+			-->			</ul>
 					</nav>
 
 				<!-- Main -->
