--- a/2Launchingintocybersecurity.html
+++ b/2Launchingintocybersecurity.html
@@ -103,7 +103,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic vorlage.html" class="image">
+									<a href="0.1Artefacts.html" class="image">
 										<img src="images/picprojects.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -113,13 +113,13 @@
 											</header>
 											<p>These are the projects carried out to meet those learning outcomes, which are described in the link below.</p>
 											<ul class="actions">
-												<li><a href="generic vorlage.html" class="button">Learn more</a></li>
+												<li><a href="0.1Artefacts.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="0.2Reflections.html" class="image">
 										<img src="images/picreflections.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -129,13 +129,13 @@
 											</header>
 											<p>What exactly have I learned and how?</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="0.2Reflections.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="0.3Notes.html" class="image">
 										<img src="images/picnotes.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -145,7 +145,7 @@
 											</header>
 											<p>Notes from various meetings, as well as feedback from team members and tutors.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="0.3Notes.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -160,7 +160,7 @@
 									</header>
 									<p>What skills have I gained or enhanced as a result of this module and how can I use it? What else do I need to learn?</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
+										<li><a href="0.4Skillmatrix.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
 							</section>
