--- a/0.2Reflections.html
+++ b/0.2Reflections.html
@@ -57,7 +57,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Artefects</h1>
+										<h1>Reflections</h1>
 									</header>
 										
 									<img src="images/picreflections.jpg" width="800" height="333" align="left">  
