--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="1Aboutme.html">Abutme</a></li>
-							<li><a href="2Launchingintocybersecurity.html">Launching into Cyber Security</a></li>
+			<!--				<li><a href="1Aboutme.html">Abutme</a></li>
+					-->		<li><a href="2Launchingintocybersecurity.html">Launching into Cyber Security</a></li>
 							<li><a href="3Networkandinformtaionsecuritymanagement.html">Network and Information Security Managment</a></li>
 							<li><a href="4Infromationriskmanagement.html">Information Risk Management</a></li>
 							<li><a href="5Securesoftwaredevelopment.html">Secure Software Development</a></li>
@@ -194,10 +194,10 @@
 										<h2>About me</h2>
 									</header>
 									<p>Development means future and the future will largely take place on the Internet. With this guiding principle in mind, I use the MSc in Cyber Security to prepare myself for the future and to be able to do my part for a better world. I have a university background in natural sciences (physics and geography) and have worked as a teacher in Germany. Since in my opinion the most important good is knowledge, I strive for a lifelong personal development in order to be able to support and advise others with the skills I have acquired.</p>
-									<ul class="actions">
+				<!--					<ul class="actions">
 										<li><a href="1Aboutme.html" class="button next">more</a></li>
 									</ul>
-								</div>
+					-->			</div>
 							</section>
 	
 	
