--- a/2.1Artefacts.html
+++ b/2.1Artefacts.html
@@ -68,7 +68,7 @@
 								<section id="two">
 									<div class="inner">
 										<header class="major">
-											<h2>Point 1</h2>
+											<h2>Collaborative Discussion Summary</h2>
 										</header>
 										<p>
 											
