--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">geigermichael@gmx.net</a>
+										<p> geigermichael@gmx.net </p>
 									</div>
 								</section>
 								<section>
