--- a/2.3Notes.html
+++ b/2.3Notes.html
@@ -68,14 +68,15 @@
 								<section id="two">
 									<div class="inner">
 										<header class="major">
-											<h2>Point 1</h2>
+											<h2>Seminar session 1</h2>
 										</header>
+										<h3>Cyber security challenges and solutions from international companies using the example of Shell Global.</h3>
 										<p>
 											
 									
-									<p> Text <p>
-									<p> Text2 <p>
-									<p> Text 3 <p>
+									<h4> Text </h4>
+									<h5> Text2 </h5>
+									<h6> Text 3 </h6>
 									</div>
 							</section>
 
