--- a/2.3Notes.html
+++ b/2.3Notes.html
@@ -70,7 +70,8 @@
 										<header class="major">
 											<h2>Seminar session 1</h2>
 										</header>
-										<h3>Cyber security challenges and solutions from international companies using the example of Shell Global.</h3>
+										<h3>Cyber security challenges and solutions of international companies using the example of Shell Global.</h3>
+										</header>
 										<p>
 											
 									
