--- a/2.3Notes.html
+++ b/2.3Notes.html
@@ -148,7 +148,7 @@
 					<ol>
 						<li>Network security</li>
 						<li>Software security</li>
-						<liHuman factors</li>
+						<li>Human factors</li>
 	</ol>
 	
 						
