--- a/2.1Artefacts.html
+++ b/2.1Artefacts.html
@@ -68,12 +68,12 @@
 								<section id="two">
 									<div class="inner">
 										<header class="major">
-											<h2>Collaborative Discussion Summary</h2>
+											<h2>Collaborative Discussion initial post</h2>
 										</header>
 										<p>
 											
 									
-									<p> Text <p>
+									<p> The European parliament and the council (2016: 1) declared that: “the protection of natural persons in relation to the processing of personal data is a fundamental right”,   as well as of intangible and physical property. To uphold this fundamental right, it is the task of companies, but also government organizations, to take care of the safety of customers and citizens. A breach of this duty of supervision can not only result in reputational damage, but also massive financial damage to people and companies, the leak of personal information, intellectual property or infrastructural damage. <p>
 									<p> Text2 <p>
 									<p> Text 3 <p>
 									</div>
