--- a/2.3Notes.html
+++ b/2.3Notes.html
@@ -151,9 +151,13 @@
 						<li>Human factors</li>
 	</ol>
 	
+	<div>
+	</div>
 	
 	
-<h2>Seminar session 2</h2>						
+	
+<h2>Seminar session 2</h2>
+	</header>
 
 	<h3>Threat modeling and cyber security design approaches using the example of Scotland's Health System.</h3>
 	
