--- a/2.3Notes.html
+++ b/2.3Notes.html
@@ -193,7 +193,7 @@
 	<ul>
 		<li>determine all system components (Hardware, Software, Databases, Networks, People & procedures </li>
 		<li>Make compromise difficult</li>
-		<li>Make disruption difficult <li>
+		<li>Make disruption difficult </li>
 		<li>Make compromise detection easier </li>
 		<li>Reduce the impact of compromise </li>
 		<ul>
@@ -227,7 +227,7 @@
 		<!--		<b>Threat identification<b>
 		-->			<p>
 								
- <b>Some threat modeling techiques:<b>
+ <b>Some threat modeling techiques:</b>
 	 <ul>
 		 <li>Abuse case </li>
 		 <li>STRIDE</li>
