--- a/6Securesystemarchitecture.html
+++ b/6Securesystemarchitecture.html
@@ -30,7 +30,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="1Aboutme.html">Abutme</a></li>
+		<!--					<li><a href="1Aboutme.html">Abutme</a></li>   -->
 							<li><a href="2Launchingintocybersecurity.html">Launching into Cyber Security</a></li>
 							<li><a href="3Networkandinformtaionsecuritymanagement.html">Network and Information Security Managment</a></li>
 							<li><a href="4Infromationriskmanagement.html">Information Risk Management</a></li>
