--- a/2.1Artefacts.html
+++ b/2.1Artefacts.html
@@ -77,11 +77,11 @@
 										<p></p>
 										<a href="Launching_inot_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_peerResponse1.pdf">Peer Response 1</a>
 										<p></p>
-										<a href="Launching_inot_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_peerResponse2.pdf">Peer Response 1</a>
+										<a href="Launching_inot_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_peerResponse2.pdf">Peer Response 2</a>
 										<p></p>
-										<a href="Launching_inot_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_peerResponse3.pdf">Peer Response 1</a>
+										<a href="Launching_inot_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_peerResponse3.pdf">Peer Response 3</a>
 										<p></p>
-										<a href="Launching_inot_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_SummaryPost.pdf">Peer Response 1</a>
+										<a href="Launching_inot_cyber_security_artefacts/Collaborative Discussion 1/Collaborative Discussion1_SummaryPost.pdf">Summary Post</a>
 										</b>
 										
 										
