--- a/2.1Artefacts.html
+++ b/2.1Artefacts.html
@@ -175,7 +175,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="geigermichael@gmx.net">geigermichael@gmx.net</a>
+										<a href="mailto:geigermichael@gmx.net">geigermichael@gmx.net</a>
 									</div>
 								</section>
 								<section>
