--- a/2.4Skillmatrix.html
+++ b/2.4Skillmatrix.html
@@ -60,7 +60,7 @@
 										<h1>Skillmatrix</h1>
 									</header>
 											
-									<img src="images/picprojects.jpg" width="800" height="333" align="left">  
+									<img src="images/picskillmatrix.jpg" width="800" height="333" align="left">  
 									<div>
 								</div>
 									<!-- </section> -->
