--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
-							-->		</ul>
+									</ul>
 								</form>
-							</section>
+						-->		</section>
 							<section class="split">
 								<section>
 									<div class="contact-method">
