--- a/2.2Reflections.html
+++ b/2.2Reflections.html
@@ -103,15 +103,14 @@
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
-							-->		</ul>
-								</form>
-							</section>
+									</ul>
+							-->	</form>
 							<section class="split">
 								<section>
-									<div class="contact-method">
+									<div class="contact-method">  
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">geigermichael@gmx.net</a>
+										<a href="mailto:geigermichael@gmx.net">geigermichael@gmx.net</a>
 									</div>
 								</section>
 								<section>
