--- a/2.4Skillmatrix.html
+++ b/2.4Skillmatrix.html
@@ -105,13 +105,12 @@
 										<li><input type="reset" value="Clear" /></li>
 							-->		</ul>
 								</form>
-							</section>
 							<section class="split">
 								<section>
-									<div class="contact-method">
+									<div class="contact-method">  
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">geigermichael@gmx.net</a>
+										<a href="mailto:geigermichael@gmx.net">geigermichael@gmx.net</a>
 									</div>
 								</section>
 								<section>
