--- a/8Principlesofdigitalforensicsandcyberlaw.html
+++ b/8Principlesofdigitalforensicsandcyberlaw.html
@@ -167,7 +167,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+						<!--		<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -186,14 +186,14 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
-								</form>
+								</form>   -->
 							</section>
 							<section class="split">
 								<section>
-									<div class="contact-method">
+									<div class="contact-method">  
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">geigermichael@gmx.net</a>
+										<a href="mailto:geigermichael@gmx.net">geigermichael@gmx.net</a>
 									</div>
 								</section>
 								<section>
@@ -215,7 +215,8 @@
 							</section>
 						</div>
 					</section>
-
+		
+		
 				<!-- Footer -->
 				<!--	<footer id="footer">
 						<div class="inner">
