--- a/9Resarchmethodsandprofessionalpractice.html
+++ b/9Resarchmethodsandprofessionalpractice.html
@@ -167,7 +167,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+						<!--		<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -186,16 +186,35 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
-								</form>
+								</form>   -->
 							</section>
 							<section class="split">
 								<section>
-									<div class="contact-method">
+									<div class="contact-method">  
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">geigermichael@gmx.net</a>
+										<a href="mailto:geigermichael@gmx.net">geigermichael@gmx.net</a>
 									</div>
 								</section>
+								<section>
+						<!--			<div class="contact-method">
+										<span class="icon solid alt fa-phone"></span>
+										<h3>Phone</h3>
+										<span>(000) 000-0000 x12387</span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-home"></span>
+										<h3>Address</h3>
+										<span>1234 Somewhere Road #5432<br />
+										Nashville, TN 00000<br />
+										United States of America</span>
+									</div>
+					-->			</section>
+							</section>
+						</div>
+					</section>
 								<section>
 						<!--			<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
