--- a/2.4Skillmatrix.html
+++ b/2.4Skillmatrix.html
@@ -60,12 +60,12 @@
 										<h1>Skillmatrix</h1>
 									</header>
 											
-									<img src="images/picskillmatrix.jpg" width="800" height="333" align="left">  
+									<img src="Skillmatrix/Skill_Launching_Into_Cyber_Security.png" width="800" height="333" align="left">  
 									<div>
 								</div>
 									<!-- </section> -->
 									
-								<section id="two">
+					<!--			<section id="two">
 									<div class="inner">
 										<header class="major">
 											<h2>Point 1</h2>
@@ -77,7 +77,7 @@
 									<p> Text2 <p>
 									<p> Text 3 <p>
 									</div>
-							</section>
+							</section>    -->
 
 					</div>
 
