--- a/2.4Skillmatrix.html
+++ b/2.4Skillmatrix.html
@@ -68,7 +68,7 @@
 						<section id="two">
 									<div class="inner">
 										<header class="major">
-											<h2> </h2>
+											<h2>Test </h2>
 										</header>
 										<p>
 											
