--- a/2.4Skillmatrix.html
+++ b/2.4Skillmatrix.html
@@ -60,7 +60,7 @@
 										<h1>Skillmatrix</h1>
 									</header>
 											
-									<img src="Skillmatrix/Skill_Launching_Into_Cyber_Security.png" width="1000" height="500" align="left">  
+									<img src="Skillmatrix/Skill_Launching_Into_Cyber_Security.png" width="1200" height="600" align="left">  
 									<div>
 								</div>
 									<!-- </section> -->
@@ -68,7 +68,7 @@
 						<section id="two">
 									<div class="inner">
 										<header class="major">
-											<h2>Test </h2>
+											<h2>learned skills and personal development opportunities:</h2>
 										</header>
 										<p>
 											
