--- a/9Resarchmethodsandprofessionalpractice.html
+++ b/9Resarchmethodsandprofessionalpractice.html
@@ -236,21 +236,18 @@
 					</section>
 
 				<!-- Footer -->
-				<!--	<footer id="footer">
+				<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
+					<!--		<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
+							</ul>    -->
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-						
- 
-			-->
-						</ul>
+								<li>&copy; Michael Geiger</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+							</ul>
 						</div>
 					</footer>
 
