--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/piclaunching.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="2Launchingintocybersecurity.html" class="link">Launching into Cyber Security</a></h3>
