--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/picnetwork.jpg " alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="3Networkandinformtaionsecuritymanagement.html" class="link">Network and Information Security Management</a></h3>
@@ -111,7 +111,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/picinformation.jpg " alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="4Infromationriskmanagement.html" class="link">Information Risk Management</a></h3>
@@ -120,7 +120,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/picsecuresoftware.jpg " alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="5Securesoftwaredevelopment.html" class="link">Secure Software Development</a></h3>
@@ -129,7 +129,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/picsecuresystem.jpg " alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="6Securesystemarchitecture.html.html" class="link">Secure System Architecture</a></h3>
@@ -138,7 +138,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/pichuman.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="7Thehumanfactor.html" class="link">The Human Factor</a></h3>
@@ -149,7 +149,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/picprinciples.jpg " alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="8Principlesofdigitalforensicsandcyberlaw.html" class="link">Principles of Digital Forensics and Cyber Law</a></h3>
@@ -159,7 +159,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/picresearch.jpg " alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="9Resarchmethodsandprofessionalpractice.html" class="link">Research Methods and Professional Practice</a></h3>
@@ -169,7 +169,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/picmsc.jpg " alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="10Msccybersecurityproject.html" class="link">MSc Cyber Security Project</a></h3>
