--- a/2.1Artefacts.html
+++ b/2.1Artefacts.html
@@ -150,7 +150,7 @@
 										<p>The task was to code in Python a solution to one of the issues identified in the individual essay.</p>
 										
 										<b>
-											<a href="Artefacts/Launching_into_cyber_security_artefacts/Individual Essay_Assessment.pdf">Python Project</a>
+											<a href="Artefacts/Launching_into_cyber_security_artefacts/python-project.zip ">Python Project</a>
 											<p> </p>
 										</b>
 										
