--- a/0.1Artefacts.html
+++ b/0.1Artefacts.html
@@ -29,7 +29,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="1Aboutme.html">Abutme</a></li>
+				<!--			<li><a href="1Aboutme.html">Abutme</a></li>    -->
 							<li><a href="2Launchingintocybersecurity.html">Launching into Cyber Security</a></li>
 							<li><a href="3Networkandinformtaionsecuritymanagement.html">Network and Information Security Managment</a></li>
 							<li><a href="4Infromationriskmanagement.html">Information Risk Management</a></li>
@@ -80,8 +80,7 @@
 							</section>
 
 					</div>
-
-				<!-- Contact -->
+<!-- Contact -->
 		<!--			<section id="contact">
 						<div class="inner">
 							</section>
@@ -111,7 +110,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">geigermichael@gmx.net</a>
+										<a href="mailto:geigermichael@gmx.net">geigermichael@gmx.net</a>
 									</div>
 								</section>
 								<section>
@@ -137,17 +136,15 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-		<!--						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-				-->				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-		<!--						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-		-->						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<!--		<ul class="icons">
+								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
+							</ul>    -->
 							<ul class="copyright">
-						 	<li>&copy; Michael Geiger</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-								
-								
+								<li>&copy; Michael Geiger</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
@@ -162,6 +159,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
