--- a/3Networkandinformtaionsecuritymanagement.html
+++ b/3Networkandinformtaionsecuritymanagement.html
@@ -86,12 +86,13 @@
 										
 										<h2>Learning Outcomes</h2>
 									</header>
-									<p>I will learn:
-
-    Dolor etiam magna etiam.
-										
-    Sagittis lorem eleifend.
-    Felis dolore viverra.
+									<p>
+										<ul>
+											<li>Identify and analyse security risks and vulnerabilities in IT network systems and determine appropriate methodologies, tools and techniques to manage and/or solve them.</li>
+											<li>Design and critically appraise computer programs and systems to produce solutions that help manage and audit risk and security issues.</li>
+											<li>Gather and synthesise information from multiple sources (including internet security alerts & warning sites) to aid in the systematic analysis of security breaches and issues.</li>
+											<li>Articulate the legal, social, ethical and professional issues faced by information security professionals.</li>
+									</ul>
 </p>
 								</div>
 							</section>
@@ -109,13 +110,13 @@
 											</header>
 											<p>These are the projects carried out to meet those learning outcomes, which are described in the link below.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="3.1Artefacts.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="3.2Reflections.html" class="image">
 										<img src="images/picreflections.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -125,13 +126,13 @@
 											</header>
 											<p>What exactly have I learned and how?</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="2.2Reflections.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="3.3Notes.html" class="image">
 										<img src="images/picnotes.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -141,7 +142,7 @@
 											</header>
 											<p>Notes from various meetings, as well as feedback from team members and tutors.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="3.3Notes.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -156,7 +157,7 @@
 									</header>
 									<p>What skills have I gained or enhanced as a result of this module and how can I use it? What else do I need to learn?</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
+										<li><a href="2.4Skillmatrix.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
 							</section>
