--- a/3Networkandinformtaionsecuritymanagement.html
+++ b/3Networkandinformtaionsecuritymanagement.html
@@ -64,7 +64,7 @@
 							</header>
 				
 							<div class="content">
-								<p>work in progress</p>
+								<p>A grounding in security concepts and terminology, illustrated by hands on practice in network technology</p>
 							</div>
 						</div>
 					</section>
